src/objects/Claim__c.object
<CustomObject>
    <fields>
        <fullName>Entitlement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Complimentary Maintenance Entitlement record that is used to create this claim</description>
        <label>Entitlement</label>
        <referenceTo>Entitlement__c</referenceTo>
        <relationshipLabel>Claims</relationshipLabel>
        <relationshipName>Claims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Main_Symbol__c</fullName>
        <label>Main Symbol</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MileageIn__c</fullName>
        <description>USED ONLY FOR CODE. Since we can&apos;t create a formula field for ServiceHistorys, we need this field to compare if the mileage is within the KM Limit</description>
        <label>MileageIn</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_of_1st_Sub_Symbol__c</fullName>
        <description>Cost associated with selected 1st sub symbol as calculated from the regionalized pricing model</description>
        <label>Price of 1st Sub Symbol</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_of_2nd_Sub_Symbol__c</fullName>
        <description>Cost associated with selected 2nd sub symbol as calculated from the regionalized pricing model</description>
        <label>Price of 2nd Sub Symbol</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_of_3rd_Sub_Symbol__c</fullName>
        <description>Cost associated with selected 3rd sub symbol as calculated from the regionalized pricing model</description>
        <label>Price of 3rd Sub Symbol</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_of_Main_Symbol__c</fullName>
        <description>Cost associated with selected main symbol as calculated from the regionalized pricing model</description>
        <label>Price of Main Symbol</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RO_Number__c</fullName>
        <description>Text value to store the RO number (Service History)</description>
        <label>RO Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceHistorys__c</fullName>
        <description>Alphanumeric RO number for the repair order being claimed</description>
        <label>ServiceHistorys</label>
        <length>100</length>
        <referenceTo>ServiceHistorys__x</referenceTo>
        <relationshipLabel>Claims</relationshipLabel>
        <relationshipName>Claims</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <formula>Price_of_Main_Symbol__c +  Price_of_1st_Sub_Symbol__c  +  Price_of_2nd_Sub_Symbol__c +  Price_of_3rd_Sub_Symbol__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VIN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VIN/Serial #</label>
        <referenceTo>VIN__c</referenceTo>
        <relationshipLabel>Claims</relationshipLabel>
        <relationshipName>Claims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Valid_Date__c</fullName>
        <formula>IF( 
   AND(  
       OR(DATEVALUE(CreatedDate) &gt;   Entitlement__r.Complimentary_Maintenance_Start_Date__c , DATEVALUE(CreatedDate) =  Entitlement__r.Complimentary_Maintenance_Start_Date__c)  
   ,   OR(DATEVALUE(CreatedDate) &lt;  Entitlement__r.Complimentary_Maintenance_End_Date__c, DATEVALUE(CreatedDate) =  Entitlement__r.Complimentary_Maintenance_Start_Date__c) ) , &apos;Valid&apos; , &apos;Not Valid&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valid Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid_KM_Limit__c</fullName>
        <formula>IF(OR(VALUE(MileageIn__c) &lt; Entitlement__r.Complimentary_Maintenance_KM_Limit__c, VALUE(MileageIn__c) = Entitlement__r.Complimentary_Maintenance_KM_Limit__c) , &apos;Valid&apos;, &apos;Not Valid&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valid KM Limit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1st_Sub_Symbol__c</fullName>
        <label>1st Sub Symbol</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X2nd_Sub_Symbol__c</fullName>
        <label>2nd Sub Symbol</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X3rd_Sub_Symbol__c</fullName>
        <label>3rd Sub Symbol</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Claim</label>
    <listViews>
        <fullName>All</fullName>
        <columns>RO_Number__c</columns>
        <columns>VIN__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Main_Symbol__c</columns>
        <columns>X1st_Sub_Symbol__c</columns>
        <columns>X2nd_Sub_Symbol__c</columns>
        <columns>X3rd_Sub_Symbol__c</columns>
        <columns>Price_of_Main_Symbol__c</columns>
        <columns>Price_of_1st_Sub_Symbol__c</columns>
        <columns>Price_of_2nd_Sub_Symbol__c</columns>
        <columns>Price_of_3rd_Sub_Symbol__c</columns>
        <columns>Total_Price__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>C-{00000000}</displayFormat>
        <label>Claim Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claims</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>